@@ -345,3 +345,10 @@ fhandler_termios::fixup_after_fork (HANDLE parent)
   this->fhandler_base::fixup_after_fork (parent);
   fork_fixup (parent, get_output_handle (), "output_handle");
 }
+
+__off64_t
+fhandler_termios::lseek (__off64_t, int) 
+{
+  set_errno (ESPIPE);
+  return -1; 
+}
